--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -66,7 +66,7 @@
 										accept="image/*"
 										class="fileimg uploaddisplay"
 										name="sliderimg"
-										oninput="uploadDisplayInput(this)"
+										onchange="uploadDisplayInput(this)"
 									/>
 									<button
 										class="previewSpan displaybtn btn"
@@ -93,7 +93,7 @@
 							<% }) %>
 						</tbody>
 					</table>
-					<button type="submit" class="btn btn-outline-primary submit" disabled>
+					<button type="button" class="btn btn-outline-primary submit warningcheck" >
 						Submit
 					</button>
 				</form>
@@ -117,30 +117,67 @@
 		<script>
 			const previewDiv = document.querySelector('.preview');
 			const closesvg = document.querySelector('.closesvg');
+			const submitbtn = document.querySelector('.submit');
 
 			const uploadDisplayInput = (e) => {
-				e.parentNode.parentNode.children[2].children[0].removeAttribute(
-					'disabled'
-				);
-				e.parentNode.children[1].classList.add('btn-info');
-				e.parentNode.children[1].removeAttribute('disabled');
+				e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
+				if(e.value != ""){
+				e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
+				submitbtn.classList.remove("warningcheck");
+				e.parentNode.children[1].classList.add("btn-info");
+				e.parentNode.children[1].removeAttribute("disabled");
 				e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
+				}else{
+				e.parentNode.parentNode.children[2].children[0].setAttribute("disabled", true);
+				e.parentNode.children[1].classList.remove("btn-info");
+				e.parentNode.children[1].setAttribute("disabled", true);
+				submitbtn.classList.add("warningcheck");
+				}
 			};
 
-			// const uploadDisplayChange = (e) => {
-			// 	if (e.parentNode.childern[0].value == '') {
-			// 		e.parentNode.childern[1].classList.remove('btn-info');
-			// 		e.parentNode.childern[1].setAttribute('disabled', 'disabled');
-			// 	}
-			// };
+			const nocontentswal = () => {
+			Swal.fire({
+				position: "center",
+				icon: "warning",
+				title: "Please upload any image",
+				showConfirmButton: false,
+				timer: 2500,
+			});
+			};
+			const checkswal = () => {
+			Swal.fire({
+				position: "center",
+				icon: "warning",
+				title: "Please check any checkbox",
+				showConfirmButton: false,
+				timer: 2500,
+			});
+			};
+
+
+			submitbtn.addEventListener("click", () => {
+				if (
+					submitbtn.getAttribute("type") == "button" &&
+					submitbtn.classList.contains("warningcheck")
+				) {
+					nocontentswal();
+				} else if (
+					submitbtn.getAttribute("type") == "button" &&
+					!submitbtn.classList.contains("warningcheck")
+				) {
+					checkswal();
+				} else {
+					return;
+				}
+			});
 
 			const updatesCheckboxChange = (e) => {
 				if (
 					document.querySelectorAll('input[type="checkbox"]:checked').length
 				) {
-					document.querySelector('.submit').removeAttribute('disabled');
+					submitbtn.setAttribute("type", "submit");
 				} else {
-					document.querySelector('.submit').setAttribute('disabled', true);
+					submitbtn.classList.add("warningcheck");
 				}
 			};
 			const previewSpanClick = (e) => {
