--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -93,7 +93,10 @@
 							<% }) %>
 						</tbody>
 					</table>
-					<button type="button" class="btn btn-outline-primary submit warningcheck" >
+					<button
+						type="button"
+						class="btn btn-outline-primary submit warningcheck"
+					>
 						Submit
 					</button>
 				</form>
@@ -119,53 +122,57 @@
 			const closesvg = document.querySelector('.closesvg');
 			const submitbtn = document.querySelector('.submit');
 
-			
-			
 			const uploadDisplayInput = (e) => {
-				e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
-				if(e.value != ""){
-				e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
-				submitbtn.classList.remove("warningcheck");
-				e.parentNode.children[1].classList.add("btn-info");
-				e.parentNode.children[1].removeAttribute("disabled");
-				e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
-				}else{
-				e.parentNode.parentNode.children[2].children[0].setAttribute("disabled", true);
-				e.parentNode.children[1].classList.remove("btn-info");
-				e.parentNode.children[1].setAttribute("disabled", true);
-				submitbtn.classList.add("warningcheck");
+				e.parentNode.parentNode.children[2].children[0].removeAttribute(
+					'disabled'
+				);
+				if (e.value != '') {
+					e.parentNode.parentNode.children[2].children[0].removeAttribute(
+						'disabled'
+					);
+					submitbtn.classList.remove('warningcheck');
+					e.parentNode.children[1].classList.add('btn-info');
+					e.parentNode.children[1].removeAttribute('disabled');
+					e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
+				} else {
+					e.parentNode.parentNode.children[2].children[0].setAttribute(
+						'disabled',
+						true
+					);
+					e.parentNode.children[1].classList.remove('btn-info');
+					e.parentNode.children[1].setAttribute('disabled', true);
+					submitbtn.classList.add('warningcheck');
 				}
 			};
 
 			const nocontentswal = () => {
-			Swal.fire({
-				position: "center",
-				icon: "warning",
-				title: "Please upload any image",
-				showConfirmButton: false,
-				timer: 2500,
-			});
+				Swal.fire({
+					position: 'center',
+					icon: 'warning',
+					title: 'Please upload any image',
+					showConfirmButton: false,
+					timer: 2500
+				});
 			};
 			const checkswal = () => {
-			Swal.fire({
-				position: "center",
-				icon: "warning",
-				title: "Please check any checkbox",
-				showConfirmButton: false,
-				timer: 2500,
-			});
+				Swal.fire({
+					position: 'center',
+					icon: 'warning',
+					title: 'Please check any checkbox',
+					showConfirmButton: false,
+					timer: 2500
+				});
 			};
 
-
-			submitbtn.addEventListener("click", () => {
+			submitbtn.addEventListener('click', () => {
 				if (
-					submitbtn.getAttribute("type") == "button" &&
-					submitbtn.classList.contains("warningcheck")
+					submitbtn.getAttribute('type') == 'button' &&
+					submitbtn.classList.contains('warningcheck')
 				) {
 					nocontentswal();
 				} else if (
-					submitbtn.getAttribute("type") == "button" &&
-					!submitbtn.classList.contains("warningcheck")
+					submitbtn.getAttribute('type') == 'button' &&
+					!submitbtn.classList.contains('warningcheck')
 				) {
 					checkswal();
 				} else {
@@ -177,9 +184,9 @@
 				if (
 					document.querySelectorAll('input[type="checkbox"]:checked').length
 				) {
-					submitbtn.setAttribute("type", "submit");
+					submitbtn.setAttribute('type', 'submit');
 				} else {
-					submitbtn.classList.add("warningcheck");
+					submitbtn.classList.add('warningcheck');
 				}
 			};
 			const previewSpanClick = (e) => {
